--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 Nova Echo Mining Assistant
 
 The goal of this project it to produce an application to interpret the output of fleet logs produced by the game "Eve Online" by CCP Games.
-This started out as a command line python script, but as I have had some requests to make it more user friendly a GUI seemed a good place to start.
+This ortiginally started out as a command line python script, but as I have had some requests to make it more user friendly a GUI seemed a good place to start.
 
-I am using this project to help me learn wxPython, so there will be mistakes/bugs/failings.
+At present it is a single window application which will out put the data from a single log file selected by the user.
+
+I am using this project to help me learn wxPython and further my understanding of python, so there are bound to be mistakes/bugs.
